Updated the Simplified Chinese translations for Xfce 4.4
(Old svn revision: 25341)

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,5 +1,4 @@
-# ----zh_CN.po (xfce4-panel 4.3.90.2)  ----
-# Simplified Chinese translations for xfce-mcs-plugins package.
+# Simplified Chinese translation of the xfce-mcs-plugins package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Yongtao Yang <yongtao.yang@telia.com>, 2004.
@@ -12,9 +11,9 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 16:30+0200\n"
-"PO-Revision-Date: 2007-02-07 20:38+0800\n"
+"PO-Revision-Date: 2007-03-29 05:59+0800\n"
 "Last-Translator: wuli <wurisky@gmail.com>\n"
-"Language-Team: Chinese/Simplified <risky@linuxsir.org>\n"
+"Language-Team: Simplified Chinese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -139,61 +138,61 @@ msgstr "开发者"
 
 #: ../panel/main.c:60
 msgid "Show this message and exit"
-msgstr ""
+msgstr "显示这条消息然后退出"
 
 #: ../panel/main.c:61
-#, fuzzy
+#, 
 msgid "Show configuration dialog"
-msgstr "显示提示图标"
+msgstr "显示配置对话框"
 
 #: ../panel/main.c:62
 msgid "Save configuration"
-msgstr ""
+msgstr "保存配置"
 
 #: ../panel/main.c:63
-#, fuzzy
+#, 
 msgid "Restart panels"
-msgstr "重新启动"
+msgstr "重新启动面板"
 
 #: ../panel/main.c:64
 msgid "End the session"
-msgstr ""
+msgstr "结束会话"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
-msgstr ""
+msgstr "关闭所有面板和结束程序"
 
 #: ../panel/main.c:66
-#, fuzzy
+#, 
 msgid "Add new items"
 msgstr "添加新项目"
 
 #: ../panel/main.c:89
-#, fuzzy
+#, 
 msgid "Failed to open display"
-msgstr "无法运行 \"%s\""
+msgstr "无法打开显示"
 
 #: ../panel/main.c:101
 msgid "Copyright (c) 2004-2007"
-msgstr ""
+msgstr "版权 (c) 2004-2007"
 
 #: ../panel/main.c:102
 msgid "The Xfce development team. All rights reserved."
-msgstr ""
+msgstr "Xfce开发小组。保留所有权利。"
 
 #: ../panel/main.c:103
 #, c-format
 msgid "Please report bugs to <%s>."
-msgstr ""
+msgstr "请报告bugs到<%s>."
 
 #: ../panel/main.c:147
 msgid "xfce4-panel already running"
-msgstr ""
+msgstr "xfce4-panel已经运行"
 
 #. restart
 #: ../panel/main.c:158
 msgid "Restarting xfce4-panel..."
-msgstr ""
+msgstr "正在重新启动 xfce4-panel..."
 
 #: ../panel/panel-dialogs.c:188
 #, c-format
@@ -223,14 +222,14 @@ msgid "Full Width"
 msgstr "全屏宽度"
 
 #: ../panel/panel-dialogs.c:912 ../panel/panel-dialogs.c:1148
-#, fuzzy
+#, 
 msgid "Normal Height"
-msgstr "普通宽度"
+msgstr "普通高度"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1149
-#, fuzzy
+#, 
 msgid "Full Height"
-msgstr "全屏宽度"
+msgstr "全屏高度"
 
 #: ../panel/panel-dialogs.c:921 ../panel/panel-dialogs.c:1158
 msgid "Span Monitors"
@@ -317,13 +316,13 @@ msgid "Make active panel opaque"
 msgstr "使活动面板不透明"
 
 #: ../panel/panel-dialogs.c:1509
-#, fuzzy
+#, 
 msgid "Popup position:"
-msgstr "位置"
+msgstr "弹出位置："
 
 #: ../panel/panel-dialogs.c:1519
 msgid "Automatic"
-msgstr ""
+msgstr "自动"
 
 #: ../panel/panel-dialogs.c:1563 ../panel/panel-dialogs.c:1599
 #: ../panel/panel-dialogs.c:1623
@@ -434,81 +433,81 @@ msgid "New Item"
 msgstr "新项目"
 
 #: ../plugins/launcher/launcher-exec.c:487
-#, fuzzy, c-format
+#, , c-format
 msgid "Failed to launch \"%s\""
-msgstr "无法运行 \"%s\""
+msgstr "无法启动 \"%s\""
 
 #: ../plugins/launcher/launcher-dialog.c:577
 msgid "No icon"
-msgstr ""
+msgstr "无图标"
 
 #: ../plugins/launcher/launcher-dialog.c:597
-#, fuzzy
+#, 
 msgid "Select a Directory"
-msgstr "选择监视器"
+msgstr "选择一个目录"
 
 #: ../plugins/launcher/launcher-dialog.c:641
-#, fuzzy
+#, 
 msgid "Select an Application"
-msgstr "选择动作类型："
+msgstr "选择一个应用程序："
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr ""
+msgstr "所以文件"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr ""
+msgstr "可以执行文件"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Perl Scripts"
 
 #: ../plugins/launcher/launcher-dialog.c:677
 msgid "Python Scripts"
-msgstr ""
+msgstr "Python Scripts"
 
 #: ../plugins/launcher/launcher-dialog.c:683
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Ruby Scripts"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Shell Scripts"
 
 #: ../plugins/launcher/launcher-dialog.c:760
 msgid "Unknown"
-msgstr ""
+msgstr "未知"
 
 #. allocate the chooser dialog
 #: ../plugins/launcher/launcher-dialog.c:763
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr ""
+msgstr "为 \"%s\" 选择一个图标"
 
 #: ../plugins/launcher/launcher-dialog.c:1101
-#, fuzzy
+#, 
 msgid "_Name"
-msgstr "名称"
+msgstr "名称(_N)"
 
 #: ../plugins/launcher/launcher-dialog.c:1119
-#, fuzzy
+#, 
 msgid "_Description"
-msgstr "描述"
+msgstr "描述(_D)"
 
 #: ../plugins/launcher/launcher-dialog.c:1138
-#, fuzzy
+#, 
 msgid "_Icon"
-msgstr "图标盒"
+msgstr "图标盒(_I)"
 
 #: ../plugins/launcher/launcher-dialog.c:1156
-#, fuzzy
+#, 
 msgid "Co_mmand"
-msgstr "命令"
+msgstr "命令(_M)"
 
 #: ../plugins/launcher/launcher-dialog.c:1183
 msgid "_Working Directory"
-msgstr ""
+msgstr "工作目录(_W)"
 
 #: ../plugins/launcher/launcher-dialog.c:1215
 msgid "Run in _terminal"
@@ -589,9 +588,9 @@ msgid "Use flat buttons"
 msgstr "使用平板按钮"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:215
-#, fuzzy
+#, 
 msgid "Show handle"
-msgstr "显示框架(_f)"
+msgstr "显示手柄"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:227
 msgid "Show tasks from _all workspaces"
@@ -696,7 +695,7 @@ msgstr "显示工作区动作(_K)"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr ""
+msgstr "无法启动'xfce4-panel -c'"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
