Updated the Simplified Chinese translations for trunk.
(Old svn revision: 25351)

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 16:30+0200\n"
-"PO-Revision-Date: 2007-03-29 05:59+0800\n"
+"PO-Revision-Date: 2007-03-30 23:41+0800\n"
 "Last-Translator: wuli <wurisky@gmail.com>\n"
 "Language-Team: Simplified Chinese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -178,7 +178,7 @@ msgstr "版权 (c) 2004-2007"
 
 #: ../panel/main.c:102
 msgid "The Xfce development team. All rights reserved."
-msgstr "Xfce开发小组。保留所有权利。"
+msgstr "Xfce开发团队。保留所有权利。"
 
 #: ../panel/main.c:103
 #, c-format
