2007-04-02 Maxim Dziumanenko <dziumanenko@gmail.com>
	* Update Ukrainian translation.


(Old svn revision: 25362)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-02  Maxim Dziumanenko <dziumanenko@gmail.com>
+
+	* uk.po: Updated Ukrainian translation.
+
 2007-04-01  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* zh_CN.po: Updated the simplified Chinese translation
