Updated the Polish translations for Xfce 4.4.
(Old svn revision: 25365)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-01  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* pl.po: Small fixes to the Polish translation
+	by Piotr Maliński <riklaunim@gmail.com>
+
 2007-03-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* de.po: Minor fixes to the German translation
