--- a/po/pl.po
+++ b/po/pl.po
@@ -37,7 +37,7 @@ msgstr "Edytor"
 
 #: ../config/launcher-9.rc.in.h:1
 msgid "File Manager"
-msgstr "Menadżer plików"
+msgstr "Menedżer plików"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
@@ -257,7 +257,7 @@ msgstr "Ruchomy"
 
 #: ../panel/panel-dialogs.c:1110
 msgid "Auto_hide"
-msgstr "Automatyczne ukrywanie"
+msgstr "Automatyczne_ukrywanie"
 
 #: ../panel/panel-dialogs.c:1128 ../plugins/actions/actions.c:471
 msgid "Orientation:"
@@ -320,7 +320,7 @@ msgstr "Nowy Panel"
 #: ../panel/panel-dialogs.c:1606
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Menadżer Panelu"
+msgstr "Menedżer Panelu"
 
 #: ../plugins/actions/actions.c:267 ../plugins/actions/actions.c:303
 #: ../plugins/actions/actions.c:459
@@ -715,7 +715,7 @@ msgstr "Pokaż ikony _aplikacji"
 
 #: ../plugins/windowlist/windowlist-dialog.c:239
 msgid "Show wor_kspace actions"
-msgstr "Pokaż akcje pulpitu"
+msgstr "Pokaż akcje _pulpitu"
 
 #: ../mcs-plugin/plugin.c:46
 msgid "Panel"
@@ -775,7 +775,7 @@ msgstr "Pokaż listę dostępnych okien"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Menadżer Panelu Xfce 4"
+msgstr "Menedżer Panelu Xfce 4"
 
 #~ msgid "Test Plugin"
 #~ msgstr "Wtyczka Testowa"
