* pl.po: Small fix to the Xfce 4.4 panel Polish translation
(Old svn revision: 25374)

--- a/po/pl.po
+++ b/po/pl.po
@@ -386,7 +386,7 @@ msgstr "AM/PM"
 
 #: ../plugins/clock/clock.c:544
 msgid "Display seconds"
-msgstr "Pokaż zegar przed ikonami"
+msgstr "Wyświetlaj sekundy"
 
 #: ../plugins/iconbox/iconbox.c:901
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
