--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-05  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* ca.po: Update Catalan translations
+
 2007-04-03  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* pl.po: Small fixes to the Polish translation
