--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Updated the French translation
+
 2007-04-05  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: Update Catalan translations
