--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Olivier Fourdan <fourdan@xfce.org>, 2004.
 # Collet Etienne <xanaxlnx@gmail.com>, 2005.
-# Maximilian Schleiss <maxschleiss@bluewin.ch>, 2006, 2007.
+# Maximilian Schleiss <maxschleiss@solnet.ch>, 2006, 2007.
 #
 msgid ""
 msgstr ""
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 15:28+0200\n"
 "PO-Revision-Date: 2007-02-07 14:28+0100\n"
-"Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
+"Last-Translator: Maximilian Schleiss <maxschleiss@solnet.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
