--- a/po/tr.po
+++ b/po/tr.po
@@ -90,7 +90,7 @@ msgstr "Yeni Nesne Ekle"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:899 ../panel/panel.c:696
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "Panel Özelleştir"
+msgstr "Paneli Özelleştir"
 
 #: ../panel/panel.c:707
 msgid "Add Items"
