Updated the Italian translations in branch and updated the AUTHORS files.
(Old svn revision: 25686)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-07  Maximilian Schleiss <maxschleiss@solnet.ch>
+
+	* it.po: Updated the Italian translation
+	by Fabio Riga <usul@aruba.it>
+
 2007-04-05  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: Update Catalan translations
