Update NEWS after gentle reprimand from Nick ;-)
(Old svn revision: 25715)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 NEWS for xfce4-panel
 ====================
+4.4.2
+=====
+- Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
+  Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
 
 4.4.1
 =====
