--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 4.5.x
 =====
+- Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
+  Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
 - Completely rewritten launcher (Bugs 2336, 2365, 1323, 2262 and 1225)
 - Various improvements in libxfce4panel (memory leaks, G_GNUC_INTERNAL,
   GSList, visibility support, canonical strings and fixed pedantic warnings).
