..and the NEWS update.
(Old svn revision: 25724)

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ NEWS for xfce4-panel
 ====================
 4.4.2
 =====
+- Make sure tooltips are set for more than 1 clock instance (bug #3109).
+  (Jasper)
 - Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
   Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
 
